// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ljkxXp CLIGuide__StyledAccordion-sc-1q6mc5x-0 hTUAzi"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dxLTUa"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kEUDyz"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dfYTAc"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 kUTnPv fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
              />
              <span
                class="StyledText-sc-1sadyjn-0 kdtqol"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gHlpEJ"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 uHeKH"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 czoCTd"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fMLcNm"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ljkxXp CLIGuide__StyledAccordion-sc-1q6mc5x-0 hTUAzi"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dxLTUa"
      >
        <button
          aria-expanded="false"
          class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kEUDyz"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dfYTAc"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 kUTnPv fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
              />
              <span
                class="StyledText-sc-1sadyjn-0 kdtqol"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gHlpEJ"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 uHeKH"
          role="region"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 iPDbNQ"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the children as-is if there is only one 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 uHeKH"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ljkxXp CLIGuide__StyledAccordion-sc-1q6mc5x-0 hTUAzi"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dxLTUa"
        >
          <button
            aria-expanded="false"
            class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 kEUDyz"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dfYTAc"
              >
                <span
                  aria-hidden="true"
                  class="StyledText-sc-1sadyjn-0 kUTnPv fa fa-shell"
                  role="presentation"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 kdtqol"
                >
                  Get something from somewhere via the Management API
                </span>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gHlpEJ"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m18 9-6 6-6-6"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 uHeKH"
            role="region"
          >
            <div
              aria-hidden="true"
              class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 iPDbNQ"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bVXAXu"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dxLTUa"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kEUDyz"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bqhqDO"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 julYLc fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
              />
              <span
                class="StyledText-sc-1sadyjn-0 knielG"
              >
                Use the API to …
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gHlpEJ"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 uHeKH"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 czoCTd"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dNxRJm"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ljkxXp CLIGuide__StyledAccordion-sc-1q6mc5x-0 hTUAzi"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dxLTUa"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kEUDyz"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 dfYTAc"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 kUTnPv fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 kdtqol"
                        >
                          Get something from somewhere
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 gHlpEJ"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 uHeKH"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 iPDbNQ"
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iptgRM"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 ljkxXp CLIGuide__StyledAccordion-sc-1q6mc5x-0 hTUAzi"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dxLTUa"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 tWawK"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kEUDyz"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 dfYTAc"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 kUTnPv fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gcrEaW"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 kdtqol"
                        >
                          Get something else from somewhere else
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 gHlpEJ"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 gLGkbm"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 uHeKH"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 uHeKH Collapsible__AnimatedBox-sc-15kniua-0 iPDbNQ"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 uHeKH"
    />
  </div>
</div>
`;
